--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ html,
     max-width: 425px;
     margin: 0 auto;
     padding: 20px 15px;
-    min-height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
