--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+html, body, #root, .app-container {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* прибрати скрол */
+}
+
 body,
 html,
 #root {
