setup page xhanged

--- a/src/pages/StartMenu.css
+++ b/src/pages/StartMenu.css
@@ -9,6 +9,7 @@
 
     background-image: url("/assets/img/back.png");
     background-position: bottom right;
+    background-size: 85%;
     background-repeat: no-repeat;
 }
 
